--- a/css/style.css
+++ b/css/style.css
@@ -158,6 +158,13 @@ body {
 }
 
 @media (max-width: 767.98px) {
+  .hero-section .hero-section-image {
+    text-align: center;
+    margin-top: -80px;
+  }
+  .hero-section .hero-section-data{
+    margin-top: 0;
+  }
   .hero-section .hero-section-data span {
     font-size: 20px;
   }
@@ -172,6 +179,9 @@ body {
     width: 100%;
     font-size: 15px;
     margin: 10px 0;
+  }
+  .hero-section img {
+    width: 70%;
   }
 }
 
